# MBB_WebdesignPr-fung

./: db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  test.py  tsconfig.json  webpack.config.js
fooddoku/: asgi.py  settings.py  urls.py  wsgi.py
foodplaner/: forms.py  models.py  urls.py  views.py
foodplaner/migrations/: 0001_initial.py  0002_remove_foodentry_amount_in_grams_and_more.py  0003_alter_foodentry_date.py
foodplaner/static/foodplaner/src/css/: calendar.css  form.css
foodplaner/templates/foodplaner/: add_food_items.html  calendar.html  food_items.html
foodplaner/templates/foodplaner/modals/: add_food_item_modal.html
foodplaner/templates/foodplaner/partials/: calendar_htmx.html  food_item.html  food_item_calendar.html
guineapigfoodcontrol/: apps.py  forms.py  urls.py  views.py
guineapigfoodcontrol/migrations/: 0001_initial.py  0002_remove_foodentry_amount_in_grams_and_more.py  0003_alter_foodentry_date.py
guineapigfoodcontrol/templates/guineapigfoodcontrol/: add_food_items.html  calendar.html  food_items.html
guineapigfoodcontrol/templates/guineapigfoodcontrol/modals/: add_food_item_modal.html
guineapigfoodcontrol/templates/guineapigfoodcontrol/partials/: calendar_htmx.html  food_item.html  food_item_calendar.html
navigation/: notes.txt  urls.py  views.py
navigation/templates/navigation/: about_us.html  bocchi.html  contact_us.html  create_image_tagspy  dataprotection.html  image_galery.html  impressum.html  index.html  recipes.html  sports.html
website/: urls.py  views.py
website/static/website/src/css/: bocchi.css  (+7 more)
website/templates/website/: about_us.html  bocchi.html  contact_us.html  dataprotection.html  image_galery.html  impressum.html  index.html  recipes.html  sitemap.xml  sports.html
(+47 files in other folders)
